# ProxyML

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Docker/Python/: master.docker
admin-ui/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
admin-ui/src/: App.tsx  index.css
alembic/: env.py  script.py.mako
alembic/versions/: 1c5d46a54a51_add_fallback_fields.py  25e63bbc508e_add_response_body_to_load_test_results.py  862ce616503d_add_service_id_to_playground_presets.py  a2b3c4d5e6f7_add_multi_tenancy.py  ac5f99c3f7b3_add_request_logs.py  b3c4d5e6f7a8_add_system_settings.py  bb57e373bddd_add_playground_presets_and_history.py  c3d4e5f6a7b8_add_service_shares.py  cc68f484ceed_fix_playground_timestamps_timezone.py  d4e5f6a7b8c9_add_group_id_to_service_shares.py  d8e2a1b4c5f6_add_cache_fields_to_services.py  e9f3b2c6d7a8_add_is_cached_to_request_logs.py  ecc101f47cba_add_load_test_tables.py  f1a2b3c4d5e6_add_service_groups.py  f531104c5180_initial_schema.py  f6a7b8c9d0e1_add_auth_system_tables.py  g7b8c9d0e1f2_add_users_active_by_default.py  h8c9d0e1f2g3_add_email_verification.py  i9d0e1f2g3h4_add_verification_channels.py
docs/: claude-code-sdlc-howto.md
src/: config.py  main.py  seed.py
src/api/: deps.py
src/cache/: proxy_cache.py  redis_client.py
src/db/: base.py  engine.py  session.py
src/middleware/: logging.py
src/models/: __init__.py  admin_user.py  api_key.py  auth_system.py  (+12 more)
tests/: conftest.py
(+129 files in other folders)
