[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxyml"
version = "0.1.0"
description = "ProxyML — LLM API proxy with usage tracking and admin dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "httpx[http2]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
    "aiosmtplib",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.24",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
